gatewayapi.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eberry-gw
  labels:
    app: gateway-api
spec:
  gatewayClassName: nginx
  listeners:
  - port: 80
    name: http
    protocol: HTTP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eberry-route
  labels:
    app: gateway-api
spec:
  parentRefs:
  - name: eberry-gw
  hostnames:
  - "test.eberry.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: eberryapache-service
      port: 80
      
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: eberry-route2
  labels:
    app: gateway-api
spec:
  parentRefs:
  - name: eberry-gw
  hostnames:
  - "test.eberry2.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: eberry2apache-service
      port: 80
